# gta-mp

./: .gitignore  .gitmodules  download_external_deps.py
client/: CMakeLists.txt  build.bat
client/core/: CMakeLists.txt
client/core/include/: client.h  core.h  event.h  event_manager.h  singleton.h
client/core/src/: client.cpp  core.cpp  event_manager.cpp  manager_interface.h
client/core/src/gfx/: directx.cpp  directx.h  manager.cpp  manager.h
client/core/src/graphics/: directx.cpp  directx.h  graphic_manager.cpp  graphic_manager.h  manager.cpp  manager.h
client/launcher/: CMakeLists.txt  build.bat
client/launcher/src/: GTAMPLauncher.rc  debug.h  dummy_tls.cpp  launcher.cpp  launcher.h  main.cpp  patches.cpp  patches.h  pe_loader.cpp  pe_loader.h  resource.h  splash_screen.cpp  splash_screen.h
client/shared/: debug.h  error.h  exception.h  logger.h
client/shared/hook/: address.h  hook_manager.cpp  hook_manager.h  manager.cpp  manager.h  modify.cpp  modify.h  other.h  pattern.cpp  pattern.h  scoped_hook_removal.h  section.h
